--- a/nanobody_design/finetune_agents.ipynb
+++ b/nanobody_design/finetune_agents.ipynb
@@ -10,7 +10,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 1,
    "id": "a0472e92df8ee037",
    "metadata": {},
    "outputs": [],
@@ -28,7 +28,6 @@
     "from virtual_lab.constants import CONSISTENT_TEMPERATURE, DEFAULT_FINETUNING_EPOCHS\n",
     "from virtual_lab.run_meeting import run_meeting\n",
     "from virtual_lab.utils import (\n",
-    "    async_get_messages,\n",
     "    compute_finetuning_cost,\n",
     "    compute_token_cost,\n",
     "    count_tokens,\n",
@@ -58,7 +57,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 2,
    "id": "fc28ade3791ee419",
    "metadata": {},
    "outputs": [],
@@ -80,7 +79,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 3,
    "id": "164ca17b6c09fc08",
    "metadata": {},
    "outputs": [],
@@ -98,7 +97,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 4,
    "id": "a2085fcf",
    "metadata": {},
    "outputs": [],
@@ -112,7 +111,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 5,
    "id": "97d6c25e366d62a2",
    "metadata": {},
    "outputs": [],
@@ -122,7 +121,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 6,
    "id": "265f6546d2ec031",
    "metadata": {},
    "outputs": [],
@@ -139,21 +138,15 @@
     "    :return: Response from the model.\n",
     "    \"\"\"\n",
     "    async with semaphore:\n",
-    "        assistant = await async_client.beta.assistants.create(\n",
-    "            name=agent.title, instructions=agent.prompt, model=model\n",
-    "        )\n",
-    "        thread = await async_client.beta.threads.create()\n",
-    "        await async_client.beta.threads.messages.create(\n",
-    "            thread_id=thread.id, role=\"user\", content=query\n",
-    "        )\n",
-    "        await async_client.beta.threads.runs.create_and_poll(\n",
-    "            thread_id=thread.id,\n",
-    "            assistant_id=assistant.id,\n",
+    "        completion = await async_client.chat.completions.create(\n",
     "            model=model,\n",
+    "            messages=[\n",
+    "                {\"role\": \"system\", \"content\": agent.prompt},\n",
+    "                {\"role\": \"user\", \"content\": query},\n",
+    "            ],\n",
     "            temperature=CONSISTENT_TEMPERATURE,\n",
     "        )\n",
-    "        messages = await async_get_messages(client=async_client, thread_id=thread.id)\n",
-    "        response = messages[-1][\"content\"][0][\"text\"][\"value\"]\n",
+    "        response = completion.choices[0].message.content or \"\"\n",
     "\n",
     "    return response"
    ]
@@ -1390,7 +1383,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3 (ipykernel)",
+   "display_name": "virtual_lab",
    "language": "python",
    "name": "python3"
   },
