run_nanobody_design.ipynb: Add initial setup commands for Ollama and virtual lab installation

--- a/nanobody_design/run_nanobody_design.ipynb
+++ b/nanobody_design/run_nanobody_design.ipynb
@@ -3,6 +3,39 @@
   {
    "cell_type": "code",
    "execution_count": null,
+   "id": "0a57a439",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "!curl -fsSL https://ollama.com/install.sh | sh"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "c5f709b5",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "!nohup setsid ollama serve > ollama.log 2>&1 &\n",
+    "!ollama pull olmo-3:7b-think"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "b7b8dcf9",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "!git clone https://github.com/a7420174/virtual-lab.git\n",
+    "!cd virtual-lab && pip install -e .[nanobody-design]\n",
+    "!bash virtual-lab/nanobody_design/install_localcolabfold.sh"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
    "id": "initial_id",
    "metadata": {},
    "outputs": [],
