google drive mount 추가

--- a/nanobody_design/run_nanobody_design.ipynb
+++ b/nanobody_design/run_nanobody_design.ipynb
@@ -2,7 +2,18 @@
   "cells": [
     {
       "cell_type": "code",
-      "execution_count": 1,
+      "execution_count": null,
+      "id": "92a3e718",
+      "metadata": {},
+      "outputs": [],
+      "source": [
+        "from google.colab import drive\n",
+        "drive.mount('/content/drive')"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "execution_count": null,
       "id": "0a57a439",
       "metadata": {
         "colab": {
