Colab을 통해 생성됨

--- a/nanobody_design/run_nanobody_design.ipynb
+++ b/nanobody_design/run_nanobody_design.ipynb
@@ -4,7 +4,9 @@
       "cell_type": "code",
       "execution_count": null,
       "id": "92a3e718",
-      "metadata": {},
+      "metadata": {
+        "id": "92a3e718"
+      },
       "outputs": [],
       "source": [
         "from google.colab import drive\n",
@@ -66,8 +68,7 @@
         }
       ],
       "source": [
-        "!nohup setsid ollama serve > ollama.log 2>&1 &\n",
-        "!ollama pull qwen3:8b"
+        "!nohup setsid ollama serve > ollama.log 2>&1 &"
       ]
     },
     {
@@ -609,7 +610,9 @@
       "cell_type": "code",
       "execution_count": null,
       "id": "e301a638",
-      "metadata": {},
+      "metadata": {
+        "id": "e301a638"
+      },
       "outputs": [],
       "source": [
         "!wget -qO- https://raw.githubusercontent.com/YoshitakaMo/localcolabfold/main/install_colabbatch_linux.sh | bash"
@@ -617,9 +620,35 @@
     },
     {
       "cell_type": "code",
+      "source": [
+        "!ollama login"
+      ],
+      "metadata": {
+        "id": "dOq_U2ws_FGg"
+      },
+      "id": "dOq_U2ws_FGg",
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "!ollama pull deepseek-v3.1:671b-cloud"
+      ],
+      "metadata": {
+        "id": "ULNeZA7p_Bj_"
+      },
+      "id": "ULNeZA7p_Bj_",
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
       "execution_count": null,
       "id": "e8b39d57",
-      "metadata": {},
+      "metadata": {
+        "id": "e8b39d57"
+      },
       "outputs": [],
       "source": [
         "%%bash\n",
