Colab을 통해 생성됨

--- a/nanobody_design/run_nanobody_design.ipynb
+++ b/nanobody_design/run_nanobody_design.ipynb
@@ -621,7 +621,7 @@
     {
       "cell_type": "code",
       "source": [
-        "!ollama login"
+        "!ollama signin"
       ],
       "metadata": {
         "id": "dOq_U2ws_FGg"
